--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -60,7 +60,7 @@
                      var anchor = new qq.maps.Point(6, 6),
         size = new qq.maps.Size(24, 24),
         origin = new qq.maps.Point(0, 0),
-        icon = new qq.maps.MarkerImage('/static/images/ewm.jpg', size, origin, anchor);
+        icon = new qq.maps.MarkerImage('/static/images/weixin/weizhi.png', size, origin, anchor);
     var marker11 = new qq.maps.Marker({
         icon: icon,
         map: map,
