--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -67,7 +67,7 @@
 			middleControl.style.position="relative";
 			middleControl.style.width="36px";
             middleControl.style.height="36px";
-			middleControl.style.zIndex="100000";
+			middleControl.style.zIndex="1000000000000";
            middleControl.innerHTML ='<img src="https://www.cdlhome.com.sg/mobile_assets/images/icon-location.png" />';
 		   document.getElementById("container").appendChild(middleControl);
 
