--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -15,6 +15,11 @@
     .cabinet_info{
         display: none;
     }
+
+    body div {
+            text-indent: 20px;
+            line-height: 22px;
+        }
 </style>
 
 {% endblock %}
