--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -15,11 +15,6 @@
     .cabinet_info{
         display: none;
     }
-
-    body div {
-            text-indent: 20px;
-            line-height: 22px;
-        }
 </style>
 
 {% endblock %}
@@ -73,7 +68,7 @@
 			middleControl.style.width="36px";
             middleControl.style.height="36px";
 			middleControl.style.zIndex="1000000000000";
-           middleControl.innerHTML ='<img src="https://www.cdlhome.com.sg/mobile_assets/images/icon-location.png" />';
+           middleControl.innerHTML ='<img src="/static/images/weixin/weizhi.png" />';
 		   document.getElementById("container").appendChild(middleControl);
 
 
