--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -134,6 +134,7 @@
                 for (i in markersArray) {
 
                      markerImage = markersArray[i].getIcon();
+                     alert(markerImage);
                      if(markerImage.url == '/static/images/weixin/weizhi2.png')
                      {
                          var icon = get_icon('/static/images/weixin/weizhi2.png');
