--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -61,7 +61,7 @@
 
                      qq.maps.event.addListener(map,"click",function(){
                         $('.cabinet_info').hide();
-                        clearMarkerArrar();
+                        /*clearMarkerArrar();*/
                     });
 
                      var middleControl = document.createElement("div");
