--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -135,7 +135,7 @@
                 for (i in markersArray) {
 
                      markerImage = markersArray[i].getIcon();
-                     alert(markerImage);
+                     alert(markerImage.url);
                      if(markerImage.url == '/static/images/weixin/weizhi2.png')
                      {
                          var icon = get_icon('/static/images/weixin/weizhi2.png');
