--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -136,7 +136,7 @@
 
                      markerImage = markersArray[i].getIcon();
                      alert(markerImage.url);
-                     if(markerImage.url == '/static/images/weixin/weizhi2.png')
+                     if(markerImage.url === '/static/images/weixin/weizhi2.png')
                      {
                          var icon = get_icon('/static/images/weixin/weizhi2.png');
                          markersArray[i].setIcon(icon);
