--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -71,7 +71,7 @@
 			middleControl.style.position="relative";
 			middleControl.style.width="36px";
             middleControl.style.height="36px";
-			middleControl.style.zIndex="1000000000000";
+			middleControl.style.zIndex="6";
            middleControl.innerHTML ='<img src="/static/images/weixin/weizhi2.png" />';
 		   document.getElementById("container").appendChild(middleControl);
 
