--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -62,7 +62,7 @@
 
                      qq.maps.event.addListener(map,"click",function(){
                         $('.cabinet_info').hide();
-                        clearMarkerArrar();
+                        clearMarkerArray();
                     });
 
                      var middleControl = document.createElement("div");
@@ -72,7 +72,7 @@
 			middleControl.style.width="36px";
             middleControl.style.height="36px";
 			middleControl.style.zIndex="6";
-           middleControl.innerHTML ='<img src="/static/images/weixin/weizhi2.png" />';
+           middleControl.innerHTML ='<img src="/static/images/weixin/zhongxin.png" />';
 		   document.getElementById("container").appendChild(middleControl);
 
 
@@ -122,6 +122,7 @@
             markersArray.push(marker);
 
             qq.maps.event.addListener(marker,"click",function(){
+                clearMarkerArray();
                 $('.cabinet_info').show();
                 icon = get_icon('/static/images/weixin/weizhi2.png');
                 marker.setIcon(icon);
@@ -129,7 +130,7 @@
             });
         }
 
-        function clearMarkerArrar(){
+        function clearMarkerArray(){
             var markerImage;
             if (markersArray) {
                 for (i in markersArray) {
