add center point

--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -201,9 +201,9 @@
         function get_icon_zhifubao(icon_path)
         {
             var icon = new AMap.Icon({
-                size: new AMap.Size(30, 50),  //图标大小
-                image: icon_path,
-                imageOffset: new AMap.Pixel(0, 60)
+                size: new AMap.Size(40, 50),  //图标大小
+                image: 'http://webapi.amap.com/theme/v1.3/images/newpc/way_btn2.png',
+                imageOffset: new AMap.Pixel(0, -60)
             });
             return icon;
         }
