--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -202,7 +202,7 @@
         {
             var icon = new AMap.Icon({
                 size: new AMap.Size(40, 50),  //图标大小
-                image: 'http://webapi.amap.com/theme/v1.3/images/newpc/way_btn2.png',
+                image: 'http://relalive.com/static/images/weixin/weizhi.png',
                 imageOffset: new AMap.Pixel(0, -60)
             });
             return icon;
