--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -111,6 +111,8 @@
 
                 window.onload = return_back;
 
+                window.onunload = logout;
+
                 function hide_tip()
                 {
                     $('.cz_tip').hide();
