--- a/templates/weixin/report.html
+++ b/templates/weixin/report.html
@@ -34,11 +34,12 @@
                 return;
             }
             var description = $('#description').val();
+            var openid = '{{ openid }}';
 
             $.ajax({
                 type:"post",
                 url:"/weixin/save_report/", // save report
-                data:{report_id:report_id, description: description},
+                data:{report_id:report_id, description: description, openid: openid},
                 success:function(result){
                     var result_list = result.split('&');
                     if(result_list[0].toLowerCase() === 'success')
