--- a/templates/weixin/report.html
+++ b/templates/weixin/report.html
@@ -25,8 +25,7 @@
             <input class="bx_input"  type="text" id="description">
         </div>
 
-       <a href="#" id="scanQRCode" class="weui-btn weui-btn_primary page__bd_spacing">立即报修</a>
-       <br> <input type="button" name="submit" value="立即反馈" onclick="submit()">
+       <a href="#" id="submit" class="weui-btn weui-btn_primary page__bd_spacing" onclick="submit()">立即报修</a>
     </div>
     <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
     <script>
